<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="vm"
            type="com.example.shukandevpro.ui.home.HomeViewModel" />
        <variable
            name="userVm"
            type="com.example.shukandevpro.UserViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="8sp"
        android:orientation="vertical"
        tools:context=".ui.home.HomeFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.date}"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.titleMessage}"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{userVm.username}"
                android:textStyle="bold"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_welcome_honorific"
                android:textSize="24sp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/watch_info"
            android:padding="8sp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_watch_name"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_watch_battery"
                    />
            </LinearLayout>
            <ImageView
                android:src="@drawable/baseline_settings_24"
                android:scaleType="fitXY"
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:layout_marginRight="6sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_youractivity_title"
            android:layout_marginTop="16sp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/hydration_graph"
            android:layout_marginTop="4sp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_graph_hydration_title"
                android:textStyle="bold"
                android:layout_marginTop="4sp"
                android:layout_marginLeft="16sp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/screentime_graph"
            android:layout_marginTop="8sp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_graph_screentime_title"
                android:textStyle="bold"
                android:layout_marginTop="4sp"
                android:layout_marginLeft="16sp"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="デバッグ:"
            android:layout_marginTop="50sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="画面見すぎアラート"
                android:onClick="@{() -> vm.alertScreenTime()}"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="水分補給アラート"
                android:onClick="@{() -> vm.alertHydration()}"
                android:layout_marginLeft="8sp"/>
        </LinearLayout>

    </LinearLayout>
</layout>